--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<span class="logo"><img src="images/logo.png" alt="" /></span>
+						<span class="logo"><img src="images/logo-crop.png" alt="" /></span>
+            <h1>Inti</h1>
             <p>Où que tu sois</p>
 					</header>
 
