Change color palette

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<header id="header" class="alt">
 						<span class="logo"><img src="images/logo-crop.png" alt="" /></span>
             <h1>Inti</h1>
-            <p>Où que tu sois</p>
+            <h3>Où que tu sois</h3>
 					</header>
 
 				<!-- Nav -->
