--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 -->
 <html class="home blog no-js" lang="en-US">
 <head>
-    <title>Itsy | A cutesy little template by FreeHTML5.co</title>
+    <title>Inti</title>
 
     <meta charset="UTF-8"/>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
@@ -33,7 +33,7 @@
 
         <div class="logo plain logo-left">
             <div class="site-title">
-                <a href="index.html" title="Go to Home">Itsy</a>
+                <a href="index.html" title="Go to Home">Inti</a>
             </div>
         </div><!-- /logo -->
 
@@ -101,9 +101,12 @@
 <div class="hero" style="background-image: url('images/lead.jpg'); text-align:right;">
     <div class="hero-inner">
         <div class="inner">
-            <h1><span class="border border-top border-bottom">itsy</span></h1>
-            <div class="hero-line-one"></div>
-            <div class="hero-line-two"><span class="border border-bottom"><a href="https://freehtml5.co" style="color:#FFF;">by FreeHTML5</a></span></div>
+            <div class="left">
+                <img id="logo" src="images/logos/logo-crop.png" alt="">
+                <h1><span class="border border-top border-bottom">inti</span></h1>
+                <div class="hero-line-one"></div>
+                <div class="hero-line-two"><span class="border border-bottom"></span></div>
+            </div>
         </div>
 
         <a class="more-arrow" href="#content"><i class="fa fa-chevron-down"></i><span>Scroll Down</span></a>
