Add another template

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <body>
     <ul>
       <li><a href="sites/itsy/index.html">Itsy</a></li>
+      <li><a href="sites/astro/index.html">Itsy</a></li>
     </ul>
   </body>
 </html>
