Style index.html

--- a/index.html
+++ b/index.html
@@ -2,12 +2,23 @@
 <html>
   <head>
     <title>Inti</title>
+    <link rel="stylesheet" type="text/css" href="assets/static/styles.css">
   </head>
   <body>
-    <ul>
-      <li><a href="sites/itsy/index.html">Itsy</a></li>
-      <li><a href="sites/astro/index.html">Itsy</a></li>
-    </ul>
+    <header>
+        <img src="assets/logos/logo-crop.png" alt="" id="logo">
+    </header>
+    <main>
+
+      <h1>Templates</h1>
+      <ul>
+        <li><a href="sites/itsy/index.html">Itsy</a></li>
+        <li><a href="sites/astro/index.html">Astro</a></li>
+      </ul>
+    </main>
+    <footer>
+      <p>inti inc © 2024</p>
+    </footer>
   </body>
 </html>
 
