Change itsy main photo

--- a/sites/itsy/index.html
+++ b/sites/itsy/index.html
@@ -16,6 +16,7 @@
           type="text/css" media="screen"/>
     <link rel="stylesheet" href="style.css" type="text/css" media="screen"/>
     <link rel="stylesheet" href="print.css" type="text/css" media="print"/>
+    <link rel="stylesheet" href="custom.css" type="text/css"/>
     <!--[if (lt IE 9) & (!IEMobile)]>
     <link rel="stylesheet" id="lt-ie9-css" href="ie.css" type="text/css" media="screen"/>
     <![endif]-->
@@ -98,10 +99,10 @@
 </header>
 
 
-<div class="hero" style="background-image: url('images/lead.jpg'); text-align:right;">
+<div class="hero" style="background-image: url('images/hijab1.jpg'); text-align:right;">
     <div class="hero-inner">
         <div class="inner">
-            <div class="left">
+            <div class="center">
                 <img id="logo" src="images/logos/logo-crop.png" alt="">
                 <h1><span class="border border-top border-bottom">inti</span></h1>
                 <div class="hero-line-one"></div>
